<!--Dylan Ashton n01442206 -->
<resources>
    <string name="app_name" translatable="false">DylanAshtonN01442206</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="four">Four</string>
    <string name="DA2206">Dylan Ashton n01442206</string>
    <string name="enter_pass">Enter Password</string>
    <string name="who_is_joe"><strike>Who is joe?</strike></string>
    <string name="soa">stay on app?</string>
    <string name="no">no</string>
    <string name="yes">yes</string>
    <string name="v">Value</string>
    <string name="pass">123456</string>
    <string name="first">Dylan</string>
    <string name="last">Ashton</string>
    <string name="button">button</string>
    <string name="earth_going_around_the_sun">Earth going around the sun</string>
</resources>