<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/DylanTab1"
            android:enabled="true"
            android:title="@string/one"
            android:icon="@drawable/one"/>
        <item
            android:id="@+id/DylanTab2"
            android:enabled="true"
            android:title="@string/two"
            android:icon="@drawable/two"/>
        <item
            android:id="@+id/DylanTab3"
            android:enabled="true"
            android:title="@string/three"
            android:icon="@drawable/three"/>
        <item
            android:id="@+id/DylanTab4"
            android:enabled="true"
            android:title="@string/four"
            android:icon="@drawable/four"/>
    </group>
</menu>