<?xml version="1.0" encoding="utf-8"?>
<!--Dylan Ashton n01442206 -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment3"
    android:background="@color/yellow"
    android:id="@+id/DylanFragment3"
    tools:ignore="ExtraText">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/who_is_joe"
        android:fontFamily="serif"
        android:textStyle="bold|italic"
        android:textColor="@color/purple"
        android:textSize="50sp">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/pass"
        android:id="@+id/DylanTxt"
        android:fontFamily="sans-serif-black"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:text="@string/button"
        android:backgroundTint="@color/purple" />

</FrameLayout>